kubernetes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dissco-handle-manager-deployment
  labels:
    app: dissco-handle-manager-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dissco-handle-manager
  template:
    metadata:
      labels:
        app: dissco-handle-manager
    spec:
      containers:
        - name: dissco-handle-manager
          image: public.ecr.aws/m8w1i6p4/handle-manager
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
