kubernetes-route.yaml

apiVersion: v1
kind: Service
metadata:
  name: dissco-handle-manager-service
spec:
  selector:
    app: dissco-handle-manager
  ports:
    - protocol: TCP
      port: 8080
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dissco-handle-manager-route
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sandbox.dissco.tech`) && PathPrefix(`/processing/digitalmedia`)
      kind: Rule
      services:
        - name: dissco-handle-manager-service
          namespace: default
          port: 8080
      middlewares:
        - name: dissco-handle-manager-stripprefix
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: dissco-handle-manager-stripprefix
spec:
  stripPrefix:
    prefixes:
      - /processing/digitalmedia
    forceSlash: false
